--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-	font-family: 'GentiumPlusItalicINR';
+	font-family: 'Web Rupee';
 	src: url('rupee-webfont.eot');
 	src: local('☺'), url('rupee-webfont.woff') format('woff'), url('rupee-webfont.ttf') format('truetype'), url('rupee-webfont.svg#webfonte2MPjaq7') format('svg');
 	font-weight: normal;
