--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@
 	src: url('rupee-webfont.eot');
 	src: local('☺'), url('rupee-webfont.woff') format('woff'), url('rupee-webfont.ttf') format('truetype'), url('rupee-webfont.svg#webfonte2MPjaq7') format('svg');
 	font-weight: normal;
-	font-style: italic;
+	font-style: normal;
 }
 
 .rupee {
